# my-first-fastapi-app

./: .gitignore  README.md  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml
alembic/versions/: 2024_11_29_0331-747f9f9951db_create_products_table.py  2024_11_29_0355-f177ddf25dea_create_users_table.py  2024_11_29_0407-4f21838214c4_create_posts_table.py  2024_11_29_0517-b4c42a5b3df3_create_profile_table.py  2024_12_03_0435-a1ea79c9746d_create_orders_table.py  2024_12_04_1341-78d5e31cfed2_create_order_product_association_table.py  2024_12_08_1023-822d5cd0ba6d_add_count_column_to_order_product_.py  2024_12_08_1214-813c829d71b9_add_unit_price_column_to_order_product_.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py  views.py
